# validation-service

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: rust.yml
src/: config.rs  main.rs  proto.rs  qr.rs  validation.rs
src/validation/: mod.rs  qr.rs
