[package]
name = "validation-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519 = "2.2.3"
ed25519-dalek = { version = "2.1.1", features = ["pem", "rand_core", "pkcs8", "serde"] }
envy = "0.4.2"
hex = "0.4.3"
mongodb = "2.8.2"
prost = "0.12.3"
prost-types = "0.12.3"
read-secret = "0.1.2"
serde = {version = "1.0.197", features = ["derive"]}
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "net", "macros", "signal"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
tonic-reflection = "0.11.0"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.11.0"
