[package]
name = "validationsvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
ed25519 = "2.2.3"
ed25519-dalek = { version = "2.1.1", features = ["pem", "pkcs8", "rand_core"] }
envy = "0.4.2"
image = { version = "0.25.1", default-features = false, features = ["png"] }
prost = "0.12.3"
prost-types = "0.12.3"
qrcode = "0.14.0"
rand = "0.8.5"
serde = {version = "1.0.197", features = ["derive"]}
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "net", "macros", "signal"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
tonic-reflection = "0.11.0"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.11.0"
